fix expect_test rules: cc_import may not provide single file

--- a/testsuite/tools/BUILD.bazel
+++ b/testsuite/tools/BUILD.bazel
@@ -1,4 +1,5 @@
-load("//bzl:rules.bzl", "ocaml_tool_vm")
+load("//tools:TOOL_RULES.bzl", "ocaml_tool_vm")
+
 load("//test:rules.bzl",
      "test_archive",
      "test_executable",
