add missing OCAML_COMPILE_OPTSS (linux support) in tests/basic

--- a/otherlibs/unix/BUILD.bazel
+++ b/otherlibs/unix/BUILD.bazel
@@ -164,7 +164,7 @@ cc_library(
         "-Iruntime/caml",
         "-I$(GENDIR)/runtime",
         "-I$(GENDIR)/runtime/caml",
-        # "$(FILE_OFFSET_BITS)"
+        # "$(FILE_OFFSET_BITS)" ## FIXME
     ],
     defines = ["CAML_BUILDING_UNIX"],
     linkopts = ["-lm"],
