fix handling of cc deps on linux
* cc_library by default produces both libfoo.a and libfoo.so on linux;
add linkstatic to eliminate the .so
* normalize_ccinfo must return target[CcInfo] as well as the new
CcInfo constructed from the c lib in DefaultInfo (quirk of cc_library)
* always build static vmruntime (-custom) for now
* to support dynamic vmruntime we will need to use a cc_binary target
to build the .so lib and add logic to executable_impl.bzl

--- a/otherlibs/unix/BUILD.bazel
+++ b/otherlibs/unix/BUILD.bazel
@@ -1,5 +1,6 @@
 load("//bzl:rules.bzl",
      "boot_library",
+     "compiler_library",
      "compiler_module",
      "compiler_signature",
 )
@@ -7,7 +8,7 @@ load("//bzl:rules.bzl",
 MODULE_OPTS = ["-nostdlib"]
 SIG_OPTS = ["-nostdlib"]
 
-boot_library(
+compiler_library(
     name = "unix_lib",
     manifest  = [
         ":Unix",
@@ -147,8 +148,12 @@ filegroup(
 # -D_FILE_OFFSET_BITS=64  -DCAML_BUILDING_UNIX
 # -o chown.o chown.c
 
+## WARNING: on macos, this produces libunix.a; on linux: libunix.a,
+## libunix.so
 cc_library(
     name = "unix",
+    linkstatic = True, # for now
+    # features = ["-pic"],  ## no effect?
     srcs = [
         "common_c_sources",
         "unix_sources"
