fix tests/basic:constprop_test; update some docs
* That test uses CPP to generate a .ml source file from a .ml.c file,
by passing -pp. Under bazel using -pp is strongly discouraged; in this
case we use a custom rule, cc_preprocess.

--- a/testsuite/tests/basic/BUILD.bazel
+++ b/testsuite/tests/basic/BUILD.bazel
@@ -289,10 +289,7 @@ expect_test(
 
 test_module(
     name   = "Constprop",
-    struct = "constprop.ml.c",
-    opts   = ["-pp", "cpp"], ## does not work on linux: cc1 not found
-    # pp     = ["cpp"], # need a file dep here
-    open   = ["//stdlib:Stdlib"],
+    struct = "constprop.ml",
     stdlib_deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": [
