--- a/otherlibs/unix/BUILD.bazel
+++ b/otherlibs/unix/BUILD.bazel
@@ -28,7 +28,7 @@ compiler_module(
     }),
     sig    = "Unix_cmi",
     opts = MODULE_OPTS,
-    deps   = [
+    cc_deps   = [
        ":unix", ## cc_library
     ],
     # cc_deps = [
